--- a/web/app/views/App/Tutorial.html
+++ b/web/app/views/App/Tutorial.html
@@ -161,7 +161,13 @@ strToByte("hello")</code></pre>
           
         <h2 id="examples">Examples</h2>
         
-        <p>The full list of examples can be accessed by clicking <a href="/App/Examples">here</a>, but one example is shown below, so you don't have to leave the webpage.</p>
+        <p>The full list of examples can be accessed by clicking <a href="/App/Examples">here</a>, but one example is shown below, so you don't have to leave this webpage and for you to check how CX's syntax is like.</p>
+
+        <pre><code class="go">package main
+
+func main () (out str) {
+     printStr("Hello World!")
+}</code></pre>
 
         <!-- Content ends -->
       </div>
@@ -186,10 +192,11 @@ strToByte("hello")</code></pre>
     <div class="row">
       <div class="col-lg-12">
         <!-- Content starts -->
-        <p></p>
+        <p>The following sections describe the different elements that can be present in a CX program, and how they interact with each other.</p>
 
         <h2 id="comments">Comments</h2>
-        <p></p>
+        <p>There are two kinds of comments in CX: one for commenting out a single line, and another one to comment out a block of lines. As in other programming languages, commented lines are not evaluated by the interpreted or the compiler.</p>
+        <p>Any sequence of characters after  </p>
         <h2 id="packages">Packages</h2>
         <p>Mention imports.</p>
         <h2 id="global-definitions">Global definitions</h2>
