Added features to parser. More native functions. Changed while loop to for loop. Nested loops and if/else. More examples.

--- a/web/app/views/header.html
+++ b/web/app/views/header.html
@@ -59,7 +59,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">Blog</a>
+              <a href="https://blog.skycoin.net/">Blog</a>
             </li>
           </ul>
 
