--- a/web/app/views/header.html
+++ b/web/app/views/header.html
@@ -38,16 +38,17 @@
           </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">About <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="themes">
-                <li><a href="#">About CX</a></li>
-                <li class="divider"></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="https://www.skycoin.net/">Skycoin</a></li>
-              </ul>
-            </li>
+          <ul class="nav navbar-nav">            
+            <!-- <li class="dropdown">
+                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">About <span class="caret"></span></a>
+                 <ul class="dropdown-menu" aria-labelledby="themes">
+                 <li><a href="#">About CX</a></li>
+                 <li class="divider"></li>
+                 <li><a href="#">FAQ</a></li>
+                 <li><a href="https://www.skycoin.net/">Skycoin</a></li>
+                 </ul>
+                 </li> -->
+            
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">CX <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="download">
@@ -55,16 +56,21 @@
                 <li class="divider"></li>
                 <li><a href="/App/Tutorial">Tutorial and Documentation</a></li>
                 <li><a href="/App/Examples">Examples</a></li>
-                <li><a href="/public/pdf/cx.pdf">Specification</a></li>
+                <li><a href="/public/pdf/cx.pdf" target="_blank">Specification</a></li>
               </ul>
             </li>
+            
             <li>
-              <a href="https://blog.skycoin.net/">Blog</a>
+              <a href="https://blog.skycoin.net/" target="_blank">Blog</a>
+            </li>
+
+            <li>
+              <a href="https://www.skycoin.net/" target="_blank">Skycoin</a>
             </li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" target="_blank">CX Playground</a></li>
+            <li><a href="/App/Index">CX Playground</a></li>
             <li><a href="https://github.com/skycoin/cx" target="_blank">Github Repository</a></li>
           </ul>
 
