Initial redesigned grammar without actions.

--- a/cxweb/src/app/components/header/header.component.html
+++ b/cxweb/src/app/components/header/header.component.html
@@ -29,7 +29,7 @@
             <li class="divider"></li>
             <li><a routerLink="tutorial">Tutorial and Documentation</a></li>
             <li><a routerLink="examples">Examples</a></li>
-            <li><a href="/assets/cx.pdf">Specification</a></li>
+            <!-- <li><a href="/assets/cx.pdf">Specification</a></li> -->
           </ul>
         </li>
         <li>
